[package]
name = "rust-minecraft-proxy"
version = "0.1.0"
authors = ["shirokuro <46kuro212@gmail.com>", "CM8DoubleCheck <admin@doublecheck.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
derive_more = "0.99"
